--- a/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic.csproj
+++ b/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.27.0" />
   </ItemGroup>
 
   <ItemGroup>
