--- a/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/ClientApp/package.json
+++ b/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
