--- a/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/package.json
+++ b/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kvp_web_fom.prototype.retrive",
+  "name": "kvp_web_fom.prototype.retrieve",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
