--- a/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/public/manifest.json
+++ b/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "kvp_web_fom.Prototype.Retrive",
-  "name": "KVP Web Forms Prototype 2 - Retrive KVPs",
+  "short_name": "kvp_web_fom.Prototype.Retrieve",
+  "name": "KVP Web Forms Prototype 2 - retrieve KVPs",
   "icons": [
     {
       "src": "favicon.ico",
