--- a/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/Properties/launchSettings.json
+++ b/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "kvp_web_fom.Prototype.Retrive": {
+    "kvp_web_fom.Prototype.Retrieve": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7010;http://localhost:5010",
